<resources>
    <string name="notifications_service">NiLS Service</string>
    <string name="service_is_inactive">Enable NiLS service on Android Security Settings to provide notification access so all upcoming notifications will be captured and displayed on NiLS</string>
    <string name="service_is_active">NiLS Service is running.\nAll upcoming notifications will be captured and displayed on NiLS</string>
    <string name="enable_service_tip">Find \"NiLS Service\" in the list and enable it, then press the \"Back\" button to go back to NiLS</string>
    <string name="notification_panel">Notifications Panel</string>
    <string name="notification_panel_is_active">Notifications panel is active.\nNotifications list will be displayed when the lock screen appears</string>
    <string name="notification_panel_is_inactive">Notifications panel is not active</string>
    <string name="auto_hide_service">Auto Hide Service</string>
    <string name="auto_hide_is_inactive">When enabled, Auto Hide Service will automatically hide Notifications Panel when you pull down Android Notifications Bar</string>
    <string name="auto_hide_is_active">NiLS Auto Hide Service is enabled. Notification Panel will be automatically hidden when you pull down Android Notifications Bar</string>
    <string name="enable_auto_hide_service_tip">Find \"NiLS Service\" in the list and enable it, then press the \"Back\" button to go back to NiLS</string>
    <string name="nilsfp_autohide_service_label">NiLS Auto Hide Service</string>
    <string name="nilsfp_autohide_service_description">Enable this service to auto hide NiLS Notifications Panel when lock screen is not visible. (e.g. when the notifications bar is pulled down from the status bar)</string>
    <string name="title">NiLS</string>
    <string name="settingstitle">NiLS Settings</string>
    <string name="accessibility_service_description">Enable to allow NiLS receive all incoming notifications. The disclaimer displayed when enabling the accessibility service is a standard Android message. This app DOES NOT collect any of your data. Please note that this app doesn\'t have internet access permission so it actually cannot send the data anywhere.</string>
    <string name="generalsettings">General Settings</string>
    <string name="advancedsettings">Advanced Settings</string>
    <string name="behavior">Auto Wake up</string>
    <string name="appearance">Appearance</string>
    <string name="advanced">Advanced</string>
    <string name="notifications">Notifications</string>
    <string name="turnscreenon">Turn on screen</string>
    <string name="collectonunlock">Collect when unlocked</string>
    <string name="collectonunlock_summary">Keep collecting notifications when device is unlocked</string>
    <string name="order_notifications_by">Sort notifications by</string>
    <string name="notification_mode">Notification mode</string>
    <string name="privacy">Privacy</string>
    <string name="sync_back">Sync back notifications</string>
    <string name="sync_back_summary">When notification is cleared on NiLS dismiss it also on Android Notifications Bar\n(Android 4.3 and above only)</string>
    <string name="menu_about">About</string>
    <string name="about_contactus_title">Feedback</string>
    <string name="about_contactus_email">mailto:support@roymam.com</string>
    <string name="contact_summary">Contact us to ask a question, request a feature or report a bug.</string>
    <string name="contact_email">Send us an email</string>
    <string name="contact_community">Join our community on Google+</string>
    <string name="pin">Pin</string>
    <string name="app_specific_settings_title">App Specific Settings</string>
    <string name="extract_expanded_text">Use expanded notification</string>
    <string name="extract_expanded_text_summary">Android 4.1+ only: Use expanded notification if available</string>
    <string name="notification_height">Persistent notification size</string>
    <string name="catch_all_notifications">Catch all notifications</string>
    <string name="catch_all_notifications_summary">Catch all notifications from this app and handle them as persistent notifications</string>
    <string name="hide_when_notifications">Hide when notifications appear</string>
    <string name="hide_when_notifications_summary">Hide this persistent notification when normal notifications appear</string>
    <string name="auto_hide_persistent_notification">Hide when inactive</string>
    <string name="persistent_notifications_help">How To Use Persistent Notifications?</string>
    <string name="persistent_notifications_help_details">Persistent notifications are notifications that appear on the status bar and cannot be dismissed (such as music playback or weather information)\n\nThis list contains the apps that recently created persistent notifications, check the boxes to add those notifications to NiLS widget</string>
    <string name="persistent_notifications_no_apps_title">No persistent notifications</string>
    <string name="persistent_notifications_no_apps">There are currently no running apps that create persistent notifications. run the app you want and once you\'ll see its persistent notifications on Android notifications bar, go back to this settings page and you\'ll be able to add it to NiLS widget</string>
    <string name="app_icon">App Icon</string>
    <string name="title_demo_text">Notification Title</string>
    <string name="time_demo_text">9:21</string>
    <string name="service">Global Settings</string>
    <string name="widget">Widget Settings</string>
    <string name="widget_is_not_present">Widget is not present.\nclick to learn how to add it.</string>
    <string name="app_specific_settings_summary">Change notifications settings for individual apps</string>
    <string name="screenon_timeout">Keep screen on</string>
    <string name="screenon_timeout_summary">Set number of seconds to keep the screen on. (the device may keep it longer)</string>
    <string name="hide_clock_when_visible">Hide clock when visible</string>
    <string name="hide_clock_when_visible_summary">Hide clock when the persistent notification is visible for this app</string>
    <string name="floating_panel">Notifications Panel</string>
    <string name="sync">Sync</string>
    <string name="integration">Integration</string>
    <string name="swipe_to_open">Swipe right to open</string>
    <string name="swipe_to_open_summary">When enabled, swiping notification to the right will open the notification</string>
    <string name="dont_hide">Always visible</string>
    <string name="dont_hide_summary">Keep notifications list visible, even if you unlock the device.</string>
    <string name="colors_and_transparency">Colors &amp; Transparency</string>
    <string name="background_opacitiy">Background opacity</string>
    <string name="auto_title_color">Auto Title Color</string>
    <string name="auto_title_color_summary">Set title color automatically according to the app icon prominent color</string>
    <string name="layout_and_alignment">Layout &amp; Alignment</string>
    <string name="about">About</string>
    <string name="click_to_open">Click to open</string>
    <string name="click_to_open_summary">When enabled, clicking on a notification will open it. when
        disabled, clicking on a notification will show a preview
    </string>
    <string name="unlock_on_open">Unlock on open</string>
    <string name="unlock_on_open_summary">Unlocks device when notification is opened. (works only on
        stock lock screen without security enabled)
    </string>
    <string name="halo_mode">Use Halo if supported</string>
    <string name="halo_mode_summary">Open notification in Halo window if supported by the rom (doesn\'t work with native lock screen)</string>
    <string name="hide_on_click">Hide on outside tap</string>
    <string name="hide_on_click_summary">Hide notifications list when tapping outside of the notifications list</string>
    <string name="icon_size">Icon Size</string>
    <string name="title_font_size">Primary Font Size</string>
    <string name="text_font_size">Secondary Font Size</string>
    <string name="primary_text_color">Primary Text Color</string>
    <string name="primary_text_color_summary">Notification title color</string>
    <string name="secondary_text_color">Secondary Text Color</string>
    <string name="secondary_text_color_summary">Notification text color</string>
    <string name="background_color">Background Color</string>
    <string name="background_color_summary"><![CDATA[Notification background color & transparency]]></string>
    <string name="icon_background_color">Icon Background Color</string>
    <string name="icon_background_color_summary"><![CDATA[Notification icon background color & transparency]]></string>
    <string name="vertical_alignment">Vertical Alignment</string>
    <string name="enable_resize_mode">Enable Resize Mode</string>
    <string name="enable_resize_mode_summary">When enabled, touch and hold notifications list on the lock screen to change size and position</string>
    <string name="sizes">Sizes</string>
    <string name="notification_size">Notification Size</string>
    <string name="single_line_summary"><![CDATA[Show title & text in the same line]]></string>
    <string name="single_line">Single line</string>
    <string name="show_time">Show time</string>
    <string name="show_time_summary">Show the time of the notification</string>
    <string name="fit_height">Fit height to content</string>
    <string name="fit_height_summary">Fit notification height to the text content</string>
    <string name="opensource_software_used">Open Source Software</string>
    <string name="swipe_down_to_dismiss_all">Swipe down to dismiss all</string>
    <string name="swipe_down_to_dismiss_all_summary">Swipe the notifications list down to dismiss all of the notifications at once</string>
    <string name="backup_location_title">Backup file location:</string>
    <string name="last_backup_title">Last backup:</string>
    <string name="backup_comments_title">Please note:</string>
    <string name="backup_comments_summary">The backup file will be deleted when you uninstall NiLS\n</string>
    <string name="backup_restore">Backup / Restore</string>
    <string name="backup_restore_summary">Backup or restore preferences</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_summary">Backup settings to sd card</string>
    <string name="restore_summary">Restore settings from sd card</string>
    <string name="backup_information">Backup Information</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="rate_the_app_summary">If you like the app, good rating and +1s are always welcome.</string>
    <string name="rate_us_on_google_play">Rate us on Google Play</string>
    <string name="opensource_software_summary">NiLS uses the open source software below.\nMany thanks to those great developers.</string>
    <string name="gpl_license_v2">Licensed under the GNU General Public License, v2</string>
    <string name="apache_license_v2">Licensed under the Apache License, v2.0</string>
    <string name="swipe_to_dismiss_list_view">DashClock - Swipe To Dismiss List View</string>
    <string name="seekbar_preference">RoboBunny - SeekBar Preference</string>
    <string name="colorpicker_preference">Margaritov - ColorPicker Preference</string>
    <string name="debugging">Debug</string>
    <string name="view_recent_log">View recent log</string>
    <string name="send_test_notification">Send a test notification</string>
    <string name="send_test_notification_summary">Test if NiLS is configured and running correctly by sending a test notification.</string>
</resources>