<?xml version="1.0" encoding="utf-8"?>
<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">

    <header android:icon="@android:drawable/ic_menu_manage"
            android:fragment="com.roymam.android.notificationswidget.SettingsActivity$PrefsGeneralFragment"
            android:summary="@string/service_is_active"
            android:title="@string/service" />
    
    <header
            android:icon="@drawable/hardware_phone"
            android:title="@string/widget"
            android:summary="@string/widget_is_not_present">
            	<intent android:targetPackage="com.roymam.android.notificationswidget"
        		android:targetClass="com.roymam.android.notificationswidget.AppearanceActivity" />
            </header>

    <header
        android:id="@+id/floating_panel_header"
        android:icon="@drawable/nilsfp_icon_mono"
        android:title="@string/floating_panel"
        android:summary="@string/floating_panel_installed">
        <intent android:targetPackage="com.roymam.android.notificationswidget"
                android:targetClass="com.roymam.android.nilsplus.activities.NPSettings" />
    </header>

    <header android:fragment="com.roymam.android.notificationswidget.SettingsActivity$PrefsAppSpecificFragment"
        	android:icon="@drawable/apps"
            android:title="@string/app_specific_settings_title"
            android:summary="@string/app_specific_settings_summary"/>

    <header android:title="@string/backup_restore"
            android:icon="@android:drawable/ic_menu_save"
            android:fragment="com.roymam.android.common.BackupRestorePreferenceFragment"
            android:summary="@string/backup_restore_summary"/>

    <header android:fragment="com.roymam.android.notificationswidget.SettingsActivity$PrefsContactFragment"
        	android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/about_contactus_title" 
            android:summary="@string/contact_summary"/>

    <header android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_about">
            <intent android:targetPackage="com.roymam.android.notificationswidget"
        		    android:targetClass="com.roymam.android.notificationswidget.AboutActivity" />
    </header>
</preference-headers>