<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    		xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/compactNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/app_icon"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_nils_icon_mono" />

            <TextView
                android:id="@+id/notificationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/item_selector"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/title_demo_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/pinIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/pin"
                android:src="@drawable/pin" />

            <TextView
                android:id="@+id/notificationTime"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:text="@string/time_demo_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>